MD-2004-07-08-0: Bugfix:    Qmaster requires a local conf in order to start
                 Issue:     1104 
                 Bugtraq:   5071987
                 Review:    CR
                 Changed:   qmaster_configuration

JG-2004-07-07-0: Bugfix:    Fixed the build for AIX.

JG-2004-07-06-2: Bugfix:    Fixed the build for HPUX.

CR-2004-07-06-0: Bugfix:    qmaster clients may not reconnect after qmaster 
                            outage
                 Changed:   communication library (commlib)
                 Issue:     1126
                 Review:    JG

JG-2004-07-06-1: Bugfix:    projects not available after sge_qmaster restart
                 Changed:   sge_qmaster
                 Issue:     1122
                 Bugtraq:   5071498
                 Review:    CR 

JG-2004-07-06-0: QA:        Update of review form and help text.
                 Review:    CR
                 
CR-2004-06-18-0: Bugfix:    o sge_qmaster will not start unless run only as 
                              "root"
                            o qmaster cannot bind port below 1024 on Linux
                 Changed:   qmaster
                 Issue:     1096, 1098
                 Bugtraq:   5063987

MD-2004-06-17-0: Bugfix:    remove stat_log_time from configuration                              Changed:   inst_qmaster.sh
                 Review:    AS
                 Issue:     1082
                 Bugtraq:   5063305

SG-2004-06-16-0: Bugfix:    Fixes wrong info-messages handling in the scheduler
                            and the use of job categories for dispatching.
                 Review:    JG
                 Issue:     1087
                 Bugtraq:   5063311

MD-2004-06-16-0: Bugfix:    Install script fails when sgeadmin is selected 
                            as install user
                 Changed:   inst_qmaster.sh
                 Review:    JG
                 Issue:     1090

DT-2004-06-04-1: Bugfix:    o Fixed DRMAA Java binding build on Linux